@@ -10,6 +10,8 @@
   * Slime-spawn highlighting will only display in the Overworld
   * Slime-spawn highlighting will go up to y=40, as per Beta 1.9-pre5
   * Cleaned up snow rendering
+  * Added a visual tint around the ore highlight toggle indicators,
+    making them far easier to read in many circumstances.
   * (internal) update to LWJGL 2.8.2
   * (internal) removed quite a few unneeded LWJGL Jar files
 
